--- a/Pricing.html
+++ b/Pricing.html
@@ -62,66 +62,37 @@
       <div class="container navbar-container">
         <!-- Logo -->
         <a class="navbar-brand" href="home.html">
-          <img
-            src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png"
-            alt="logo"
-            class="logo-image"
-          />
+          <img src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png" alt="logo" class="logo-image">
         </a>
 
         <!-- Nav-items -->
-        <button
-          class="navbar-toggler d-md-none ms-auto"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler d-md-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse pe-3 pe-md-0"
-          id="navbarSupportedContent"
-        >
+        <div class="collapse navbar-collapse pe-3 pe-md-0" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto m-lg-auto mb-2 mb-lg-0">
+
             <!-- 1 - Features -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a
-                class="main-link navigation-link nav-link d-flex justify-content-between align-items-center"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Features<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Merchant_App.html"
-                  >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_App.html">
                     <span class="pe-3">Merchant-App</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Merchant_Portal.html"
-                  >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_Portal.html">
                     <span class="pe-3">Merchant-Portal</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Customer_App.html"
-                  >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Customer_App.html">
                     <span class="pe-3">Customer-App</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
@@ -132,41 +103,25 @@
             <!-- 2 - Solutions -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a
-                class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active"
-                aria-current="page"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Solutions<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="POS.html"
-                  >
-                    <span class="pe-3">POS System</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="POS.html">
+                    <span class="pe-3"><i class="fa-solid fa-cash-register pe-2"></i>POS System</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Hardware_Software.html"
-                  >
-                    <span class="pe-3">HardWare & Software</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Hardware_Software.html">
+                    <span class="pe-3"><i class="fa-solid fa-laptop-code pe-2"></i>HardWare & Software</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Adv_integration.html"
-                  >
-                    <span class="pe-3">Advanced Integration</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Adv_integration.html">
+                    <span class="pe-3"><i class="fa-solid fa-network-wired pe-2"></i>Advanced Integration</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -176,62 +131,31 @@
             <!-- 3 - Industries -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a
-                class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active"
-                aria-current="page"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Industries<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Industry_category_1.html"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-solid fa-burger pe-2"></i>Fast & Casual
-                      Eateries</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_1.html">
+                    <span class="pe-3"><i class="fa-solid fa-burger pe-2"></i>Fast & Casual Eateries</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Industry_category_2.html"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-solid fa-wine-glass pe-2"></i>Premium &
-                      Full-Service Dining</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_2.html">
+                    <span class="pe-3"><i class="fa-solid fa-wine-glass pe-2"></i>Premium & Full-Service Dining</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Industry_category_3.html"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-solid fa-earth-asia pe-2"></i>Large-Scale
-                      Businesses</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_3.html">
+                    <span class="pe-3"><i class="fa-solid fa-earth-asia pe-2"></i>Large-Scale Businesses</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="Industry_category_4.html"
-                  >
-                    <span class="pe-3 pb-1"
-                      ><i class="fa-solid fa-tablet-screen-button pe-2"></i
-                      >Emerging Restaurant Models</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_4.html">
+                    <span class="pe-3 pb-1"><i class="fa-solid fa-tablet-screen-button pe-2"></i>Emerging Restaurant Models</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -241,70 +165,37 @@
             <!-- 4 - Price -->
             <li class="nav-item">
               <!-- nav-link -->
-              <a class="navigation-link nav-link" href="Pricing.html"
-                >Pricing</a
-              >
+              <a class="navigation-link nav-link" href="Pricing.html">Pricing</a>
             </li>
 
             <!-- 5 - Resourse -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a
-                class="main-link navigation-link nav-link d-flex justify-content-between align-items-center"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Resource<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="about.html"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-solid fa-circle-info pe-2"></i>About
-                      Us</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="about.html">
+                    <span class="pe-3"><i class="fa-solid fa-circle-info pe-2"></i>About Us</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="https://maghil.blog/"
-                    target="_blank"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-solid fa-blog pe-2"></i>Blog</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="https://maghil.blog/" target="_blank">
+                    <span class="pe-3"><i class="fa-solid fa-blog pe-2"></i>Blog</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="https://www.youtube.com/@magilhub4286"
-                    target="_blank"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-brands fa-square-youtube pe-2"></i
-                      >YouTube</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="https://www.youtube.com/@magilhub4286" target="_blank">
+                    <span class="pe-3"><i class="fa-brands fa-square-youtube pe-2"></i>YouTube</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item d-flex justify-content-between align-items-center"
-                    href="virtual_lecture.html"
-                  >
-                    <span class="pe-3"
-                      ><i class="fa-brands fa-weibo pe-2"></i>Virtual
-                      Lecture</span
-                    >
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="virtual_lecture.html">
+                    <span class="pe-3"><i class="fa-brands fa-weibo pe-2"></i>Virtual Lecture</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -313,10 +204,9 @@
 
             <!-- Drop-Down Button -->
             <div class="nav-btn-container d-block d-md-none text-center mt-3">
-              <a class="nav-link nav-btn-demo" href="Book_demo.html"
-                >Book Demo</a
-              >
+              <a class="nav-link nav-btn-demo" href="Book_demo.html">Book Demo</a>
             </div>
+
           </ul>
         </div>
 
