--- a/virtual_lecture.html
+++ b/virtual_lecture.html
@@ -111,19 +111,19 @@
               <ul class="dropdown-menu p-0">
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="POS.html">
-                    <span class="pe-3">POS System</span> 
+                    <span class="pe-3"><i class="fa-solid fa-cash-register pe-2"></i>POS System</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Hardware_Software.html">
-                    <span class="pe-3">HardWare & Software</span> 
+                    <span class="pe-3"><i class="fa-solid fa-laptop-code pe-2"></i>HardWare & Software</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Adv_integration.html">
-                    <span class="pe-3">Advanced Integration</span> 
+                    <span class="pe-3"><i class="fa-solid fa-network-wired pe-2"></i>Advanced Integration</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
