--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maghil | Home</title>
+    <link rel="icon" href="images/red logo.png" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,6 +34,9 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Smooth Scroll -->
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 
     <!-- Font Awesome Icons -->
     <link
@@ -624,7 +628,7 @@
                 <div class="col-6 section">
                   <div class="card">
                     <picture>
-                      <img src="Images/Industries/Restro-Bar-1.png" alt="" class="img-fluid">
+                      <img src="Images/Industries/RestroBar-1.png" alt="" class="img-fluid">
                     </picture>
                     <div class="card-body text-center">
                       <div class="industry-content">
