Modify : Industry-Page

--- a/home.html
+++ b/home.html
@@ -568,11 +568,11 @@
             <h5 class="section-desc">Customized solutions for every industry.</h5>
           </div>
 
-          <div class="row">
+          <div class="row align-items-center">
 
             <!-- Image - Section -->
-            <div class="col-12 col-lg-6">
-              <div class="row">
+            <div class="col-12 col-lg-5 mb-4 mb-lg-0">
+              <div class="row section-container">
                 <!-- 1 -->
                 <div class="col-6 section">
                   <div class="card">
@@ -645,8 +645,14 @@
             </div>
 
             <!-- Content - Section -->
-            <div class="col-12 col-lg-6">
-
+            <div class="col-12 col-lg-7">
+              <div class="add-content">
+                <h4 class="title">Innovative Technology for Every Business Need</h4>
+                <div class="text-container">
+                  <p class="text">From <span class="highlighter">Restaurant</span> and <span class="highlighter">Cafe</span> management to <span class="highlighter">Retail</span> operations and <span class="highlighter">Restro bar</span> services, we provide tailored solutions that enhance efficiency, customer experience, and business growth. Our technology-driven approach ensures seamless order management, real-time inventory tracking, and advanced customer engagement tools designed for modern businesses.</p>
+                  <p class="text">Whether you're running a <span class="highlighter">quick-service Restaurant</span>, a cozy Cafe, a bustling Retail store, or a vibrant Restro bar, our solutions help you streamline operations, improve customer satisfaction, and drive revenue. Experience the future of business management with <span class="highlighter">cutting-edge features</span> that cater to your unique industry needs.</p>
+                </div>
+              </div>
             </div>
 
           </div>
