--- a/Hardware_Software.html
+++ b/Hardware_Software.html
@@ -291,7 +291,7 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/Hardware-Software-Page/Maghil_Hardware.png" alt="" class="img-fluid">
+                <img src="Images/Hardware-Software-Page/Maghil-Software.webp" alt="" class="img-fluid">
               </div>
             </div>
           </div>
