add : Features Description

--- a/Merchant_App.html
+++ b/Merchant_App.html
@@ -260,13 +260,13 @@
               <div class="child-overlay"></div>
               <div class="content-section left">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Transform Your Business with Smart POS Solutions</h3>
-                  <h6>Maghil is designed to empower businesses with cutting-edge POS technology, ensuring seamless operations and enhanced customer experience.</h6>
+                  <h3 class="text-center text-sm-start">Order Management</h3>
+                  <h6>Streamline your ordering process with seamless order placement, batch updates, and flexible payment options.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortless Transactions – Simplify sales with an intuitive and fast checkout process.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Cloud-Powered Management – Access and manage your business from anywhere, anytime.</p>
-                  <h6>We blend technology and efficiency to streamline operations, optimize sales, and elevate business performance with smart, data-driven insights.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortlessly place and update orders, including batch processing, with seamless support for cancellations and pickups.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Flexible payment options with Contact Payment (CP) and Card-Not-Present (CNP) transactions, along with convenient split billing.</p>
+                  <h6>With smart automation and real-time updates, our system ensures smooth order handling, minimizing errors and optimizing business operations.</h6>
                 </div>
               </div>
             </div>
@@ -277,13 +277,13 @@
               <div class="child-overlay"></div>          
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Check-In Management</h3>
+                  <h6>Enhance guest experience with efficient table reservations, real-time status tracking, and family-friendly amenities.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortlessly reserve tables in advance, manage guest check-ins with real-time tracking, and access categorized statuses – pending, assigned, completed, or canceled.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Enhance the dining experience with high chairs for children and seamless integration with digital menus and ordering systems.</p>
+                  <h6>From reservation to dining, Maghil simplifies every step for a hassle-free experience.</h6>
                 </div>
               </div>
             </div>
@@ -304,16 +304,16 @@
               <div class="child-overlay"></div>
               <div class="content-section left">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Amplify Your Restaurant’s Success</h3>
-                  <h6>Maghil isn’t just a management tool; it’s a growth engine for restaurant owners.</h6>
+                  <h3 class="text-center text-sm-start">Time Management</h3>
+                  <h6>Track employee work hours effortlessly with an intuitive system that enhances workforce productivity.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced analytics for data-driven decision-making.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Tools to enhance customer engagement and retention.</p>
-                  <h6>With Maghil, take your restaurant to the next level and unlock its full potential.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Seamlessly manage employee check-ins and check-outs, ensuring accurate work-hour tracking.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Optimize scheduling with automated time logs, reducing manual errors and improving efficiency.</p>
+                  <h6>With Maghil, streamline workforce management and enhance operational productivity.</h6>
                 </div>
               </div>
-            </div>
+            </div>            
           </div>
           <!-- 4 - left -->
           <div class="row align-items-center">
@@ -321,13 +321,13 @@
               <div class="child-overlay"></div>          
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Dine-In Management</h3>
+                  <h6>Enhance your guests' dining experience with a smooth and efficient ordering process.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Allow guests to place orders directly through waiters, ensuring personalized service and quick fulfillment.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Provide a digital menu for easy browsing, enabling customers to explore food options conveniently.</p>
+                  <h6>With Maghil, elevate dine-in experiences by making ordering effortless and efficient.</h6>
                 </div>
               </div>
             </div>
@@ -348,13 +348,13 @@
               <div class="child-overlay"></div>
               <div class="content-section left">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Amplify Your Restaurant’s Success</h3>
-                  <h6>Maghil isn’t just a management tool; it’s a growth engine for restaurant owners.</h6>
+                  <h3 class="text-center text-sm-start">Menu Management</h3>
+                  <h6>Keep your restaurant menu dynamic, updated, and engaging for customers.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced analytics for data-driven decision-making.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Tools to enhance customer engagement and retention.</p>
-                  <h6>With Maghil, take your restaurant to the next level and unlock its full potential.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>View, add, edit, or remove menu items with ease, ensuring your offerings stay fresh and relevant.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Highlight special dishes for a limited period, making them stand out and attracting more customers.</p>
+                  <h6>With Maghil, managing your menu becomes seamless, enhancing both operational efficiency and customer experience.</h6>
                 </div>
               </div>
             </div>
@@ -365,13 +365,13 @@
               <div class="child-overlay"></div>          
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Cash Management</h3>
+                  <h6>Track every cash transaction effortlessly, ensuring accuracy and transparency.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Monitor all cash payments and expenses with detailed pay-in and pay-out tracking.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Keep logs of staff transactions across different shifts, ensuring accountability and efficiency.</p>
+                  <h6>With Maghil, gain complete control over your restaurant’s cash flow and financial operations.</h6>
                 </div>
               </div>
             </div>
