--- a/Merchant_Portal.html
+++ b/Merchant_Portal.html
@@ -261,13 +261,13 @@
               <div class="child-overlay"></div>
               <div class="content-section left">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Transform Your Business with Smart POS Solutions</h3>
-                  <h6>Maghil is designed to empower businesses with cutting-edge POS technology, ensuring seamless operations and enhanced customer experience.</h6>
+                  <h3 class="text-center text-sm-start">Employee Management</h3>
+                  <h6>Maghil simplifies workforce management by providing tools to oversee employees, control access, and streamline operations.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortless Transactions – Simplify sales with an intuitive and fast checkout process.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Cloud-Powered Management – Access and manage your business from anywhere, anytime.</p>
-                  <h6>We blend technology and efficiency to streamline operations, optimize sales, and elevate business performance with smart, data-driven insights.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Seamlessly add, edit, or remove employees with an intuitive interface.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Grant specific access permissions based on employee roles and responsibilities.</p>
+                  <h6>With Maghil, managing your team becomes effortless, ensuring smooth day-to-day operations.</h6>
                 </div>
               </div>
             </div>
@@ -278,13 +278,13 @@
               <div class="child-overlay"></div>          
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Offer Management</h3>
+                  <h6>Maghil’s Happy Hours feature helps businesses create flexible and time-sensitive offers to attract more customers.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Set dynamic pricing for specific time slots and date ranges.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Manage special promotions, discounts, and offers effortlessly.</p>
+                  <h6>With Maghil, boost customer engagement and drive revenue with strategic offer management.</h6>
                 </div>
               </div>
             </div>
@@ -305,13 +305,13 @@
               <div class="child-overlay"></div>
               <div class="content-section left">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Amplify Your Restaurant’s Success</h3>
-                  <h6>Maghil isn’t just a management tool; it’s a growth engine for restaurant owners.</h6>
+                  <h3 class="text-center text-sm-start">Product Catalogue</h3>
+                  <h6>Maghil empowers businesses with seamless menu management and third-party integrations.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced analytics for data-driven decision-making.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Tools to enhance customer engagement and retention.</p>
-                  <h6>With Maghil, take your restaurant to the next level and unlock its full potential.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Easily add, update, and delete menu items with a user-friendly interface.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Sync products with third-party platforms like KitchenHub and WeraFood for real-time updates.</p>
+                  <h6>Manage your offerings efficiently and keep your menu always up to date.</h6>
                 </div>
               </div>
             </div>
@@ -322,13 +322,13 @@
               <div class="child-overlay"></div>          
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Report & Insights</h3>
+                  <h6>Maghil provides comprehensive reporting tools to help businesses track performance and make data-driven decisions.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Monitor live sales, refunds, net revenue, and analyze table occupancy duration and order trends for better resource management.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Generate detailed insights on sales, employees, products, and customers to drive business growth.</p>
+                  <h6>Leverage intelligent analytics to optimize business operations and drive growth.</h6>
                 </div>
               </div>
             </div>
